--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-cyberfusion-file-support (1.3) unstable; urgency=low
+
+  - Bump QueueSupport dependency
+
+ -- William Edwards <wedwards@cyberfusion.nl>  Fri, 06 Dec 2024 23:22:00 +0200
+
 python3-cyberfusion-file-support (1.2) unstable; urgency=low
 
   - Turn _write_to_tmp_file into general-purpose write_to_file
