--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-cyberfusion-file-support (1.4) unstable; urgency=low
+
+  - Automatically add EOL
+
+ -- William Edwards <wedwards@cyberfusion.nl>  Sat, 07 Dec 2024 02:51:00 +0200
+
 python3-cyberfusion-file-support (1.3) unstable; urgency=low
 
   - Bump QueueSupport dependency
