--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-cyberfusion-file-support (1.6.2) unstable; urgency=low
+
+  - Bump QueueSupport
+
+ -- William Edwards <wedwards@cyberfusion.nl>  Sat, 07 Jun 2025 18:39:00 +0200
+
 python3-cyberfusion-file-support (1.6.1) unstable; urgency=low
 
   - Bump QueueSupport
