--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-cyberfusion-file-support (1.6.3) unstable; urgency=low
+
+  - Bump QueueSupport
+
+ -- Mika Scheer <mscheer@cyberfusion.io>  Sun, 15 Jun 2025 19:03:00 +0200
+
 python3-cyberfusion-file-support (1.6.2) unstable; urgency=low
 
   - Bump QueueSupport
