--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-cyberfusion-file-support (1.7) unstable; urgency=low
+
+  - Update QueueSupport
+
+ -- William Edwards <wedwards@cyberfusion.nl>  Thu, 28 Aug 2025 17:36:00 +0200
+
 python3-cyberfusion-file-support (1.6.3) unstable; urgency=low
 
   - Bump QueueSupport
